--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+:root {
+    --primary-color: #fce138;
+    --secondary-color: #024e76;
+    --tertiary-color: #39a6b2;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -22,19 +28,20 @@ header {
     background-size: cover;
     background-position: 80%;
     background-attachment: fixed;
+    z-index: 9999;
 }
 
 header h1 {
     font-weight: bold;
     margin: 0;
     font-size: 36px;
-    color: #fce138;
+    color: var(--primary-color);
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 header a {
     text-decoration: none;
-    color: #fce138;
+    color: var(--primary-color);
 }
 
 header nav {
@@ -57,7 +64,7 @@ header nav ul li a {
 }
 
 header nav ul li a:hover {
-    background: #fce138;
+    background: var(--primary-color);
     color: #024e76;
     border-radius: 15px;
     text-shadow: none;
@@ -70,7 +77,7 @@ section {
 /* FOOTER */
 
 footer {
-    background: #fce138;
+    background: var(--primary-color);
     width: 100%;
     padding: 40px 35px;
     display: flex;
@@ -148,7 +155,7 @@ footer a {
 }
 
 .hero-form button {
-    color: #fce138;
+    color: var(--primary-color);
     background-color: #024e76;
     border: none;
     padding: 10px 20px;
@@ -172,7 +179,7 @@ footer a {
 .hero-cta h2 {
     font-style: italic;
     font-size: 55px;
-    color: #fce138;
+    color: var(--primary-color);
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 /* Hero Style End */
@@ -194,7 +201,7 @@ footer a {
 }
   
 .primary-border {
-    border-color: #fce138;
+    border-color: var(--primary-color);
 }
   
 .secondary-border {
@@ -222,7 +229,7 @@ footer a {
 
 
 .steps {
-    background: #fce138;
+    background: var(--primary-color);
 }
 
 .step {
@@ -296,7 +303,7 @@ footer a {
 .trainer {
     margin: 20px;
     background: #024e76;
-    color: #fce138;
+    color: var(--primary-color);
     flex: 1;
 }
 
@@ -339,7 +346,7 @@ footer a {
 }
 
 .contact h2 {
-    color: #fce138;
+    color: var(--primary-color);
 }
 
 .contact-info {
@@ -362,7 +369,7 @@ footer a {
 }
 
 .contact-info h3 {
-    color: #fce138;
+    color: var(--primary-color);
     font-size: 32px;
 }
   
@@ -374,7 +381,7 @@ footer a {
 }
   
 .contact-info a {
-    color: #fce138;
+    color: var(--primary-color);
 }
 
 .contact-form input, .contact-form textarea {
@@ -398,7 +405,7 @@ footer a {
 .contact-form button {
     width: 100%;
     border: none;
-    background: #fce138;
+    background: var(--primary-color);
     color: #024e76;
     text-align: center;
     padding-bottom: 15px 0;
@@ -407,7 +414,7 @@ footer a {
 }
 
 .contact-form button:hover {
-    color: #fce138;
+    color: var(--primary-color);
     background: #39a6b2;
 }
 
@@ -527,4 +534,63 @@ footer a {
         order: 3;
     }
     
-}    
+}   
+.checkbox-wrapper input, .radio-wrapper input {
+    opacity: 0;
+}
+
+.checkbox-wrapper label, .radio-wrapper label {
+    position: relative;
+    left: 10px;
+    margin: 10px;
+    line-height: 1.6;
+}
+
+.checkbox-wrapper label::before, .radio-wrapper label::before {
+    content: "";
+    height: 20px;
+    width: 20px;
+    background: rgba(255, 255, 255, 0.75);  
+    border: 1px solid #024e76;  
+    position: absolute;
+    top: -4px;
+    left: -30px;
+}
+
+.radio-wrapper label::before {
+    border-radius: 50%;
+}
+
+.radio-wrapper label::after {
+    content: "";
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: #024e76;
+    position: absolute;
+    left: -29px;
+    top: -3px;
+    background-image: radial-gradient(circle, #39a6b2, #024e76);
+}
+  
+  .checkbox-wrapper label::after {
+    content: "";
+    height: 6px;
+    width: 14px;
+    border-left: 2px solid #024e76;
+    border-bottom: 2px solid #024e76;
+    position: absolute;
+    left: -26px;
+    top: 1px;
+    transform: rotate(-58deg);
+}
+
+.checkbox-wrapper input + label::after, 
+.radio-wrapper input + label::after {
+  content: none;
+}
+
+.checkbox-wrapper input:checked + label::after, 
+.radio-wrapper input:checked + label::after {
+  content: "";
+}
